--- a/RedesNeuronales/Tarea02.TEX/bibliography.bib
+++ b/RedesNeuronales/Tarea02.TEX/bibliography.bib
@@ -1,35 +1,3 @@
-@article{MCCULLOCH199099,
-title = {A logical calculus of the ideas immanent in nervous activity},
-journal = {Bulletin of Mathematical Biology},
-volume = {52},
-number = {1},
-pages = {99-115},
-year = {1990},
-issn = {0092-8240},
-doi = {https://doi.org/10.1016/S0092-8240(05)80006-0},
-url = {https://www.sciencedirect.com/science/article/pii/S0092824005800060},
-author = {Warren S. McCulloch and Walter Pitts},
-abstract = {Because of the “all-or-none” character of nervous activity, neural
-            events and the relations among them can be treated by means of
-            propositional logic. It is found that the behavior of every net can
-            be described in these terms, with the addition of more complicated
-            logical means for nets containing circles; and that for any logical
-            expression satisfying certain conditions, one can find a net
-            behaving in the fashion it describes. It is shown that many
-            particular choices among possible neurophysiological assumptions
-            are equivalent, in the sense that for every net behaving under one
-            assumption, there exists another net which behaves under the other
-            and gives the same results, although perhaps not in the same
-            time. Various applications of the calculus are discussed.}
-}
-
-@online{MOCOSNEURONDISC2006,
-  title = {The discovery of the neuron},
-  year = {2006},
-  author = {Mo Costandi},
-  url = {https://neurophilosophy.wordpress.com/2006/08/29/the-discovery-of-the-neuron/},
-}
-
 @online{PARULAMUSTREAD,
   author = {Parul Singh},
   title = {A Must-Read History of Artificial Intelligence},
@@ -56,6 +24,12 @@ abstract = {Because of the “all-or-none” character of nervous activity, neur
   url={https://books.google.com.mx/books?id=K7P36lKzI_QC},
   year={2009},
   publisher={Prentice Hall}
+}
+
+@online{SKLEARN_MLP,
+  url={https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html},
+  title={MLPClassifier},
+  author={scikit-learn},
 }
 
 @online{QUARTODOCUMENTATION,
