--- a/RedesNeuronales/Tarea11-ProyectoFinal.TEX/bibliography.bib
+++ b/RedesNeuronales/Tarea11-ProyectoFinal.TEX/bibliography.bib
@@ -21,3 +21,27 @@
   journal = {arXiv preprint arXiv:1312.6114},
   year    = {2013}
 }
+
+@article{higgins2016beta,
+  title   = {$\beta$-VAE: Learning Basic Visual Concepts with a Constrained Variational Framework},
+  author  = {Higgins, Irina and Matthey, Loic and Pal, Arka and Burgess, Christopher and Glorot, Xavier and Botvinick, Matthew and Mohamed, Shakir and Lerchner, Alexander},
+  journal = {ICLR},
+  year    = {2017}
+}
+
+@article{goodfellow2014generative,
+  title   = {Generative Adversarial Nets},
+  author  = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {27},
+  year    = {2014}
+}
+
+@article{vahdat2020nvae,
+  title   = {NVAE: A Deep Hierarchical Variational Autoencoder},
+  author  = {Vahdat, Arash and Kautz, Jan},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {33},
+  pages   = {19667--19679},
+  year    = {2020}
+}
